Replaced Arrays.asList with List.of